Fix overflow for messages

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -17,8 +17,12 @@ li {
 }
 
 .message-list {
+  padding-top: 10px;
+  padding-bottom: 10px;
   overflow-y: scroll;
-  width: 90%;
+  overflow-x: hidden;
+  min-width: 90%;
+  min-height: 80vh;
   max-height: 80vh;
 }
 
